--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,2 +1,2 @@
-test_mesin :
-	gcc -o a unit_tests/mesin.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c
+a :
+	gcc -o a unit_tests/mesin.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c
