added unit tests

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,2 +1,5 @@
-a :
+main :
+	gcc -o a ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c
+
+mesin :
 	gcc -o a unit_tests/mesin.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c
