--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,5 +1,8 @@
 main :
-	gcc -o a ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c
+	gcc -o a ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c
+
+array :
+	gcc -o a unit_tests/arraytest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c
 
 mesin :
 	gcc -o a unit_tests/mesin.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c
