--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,8 +1,8 @@
 main :
-	gcc -o a ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c ../src/commands.c
+	gcc -o a ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/queue.c ../src/functions.c ../src/commands.c
 
 commands :
-	gcc -o a unit_tests/commandtest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/queue.c ../src/functions.c
+	gcc -o a unit_tests/commandtest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/queue.c ../src/functions.c ../src/commands.c
 
 array :
 	gcc -o a unit_tests/arraytest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c
