--- a/bin/Makefile
+++ b/bin/Makefile
@@ -4,6 +4,9 @@ main :
 commands :
 	gcc -o a unit_tests/commandtest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/queue.c ../src/functions.c ../src/commands.c
 
+game :
+	gcc -o a unit_tests/gametest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/queue.c ../src/functions.c ../src/game_rng.c
+
 array :
 	gcc -o a unit_tests/arraytest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c
 
