Added game ngasal

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,11 +1,11 @@
 main :
-	gcc -o a ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/q_dinerdash.c ../src/ADT/queue.c ../src/functions.c ../src/commands.c ../src/dinerdash.c ../src/game_2048.c ../src/game_rng.c   
+	gcc -o a ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/q_dinerdash.c ../src/ADT/queue.c ../src/functions.c ../src/commands.c ../src/dinerdash.c ../src/game_2048.c ../src/game_rng.c ../src/game_random.c   
 
 commands :
 	gcc -o a unit_tests/commandtest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/queue.c ../src/functions.c ../src/commands.c
 
 game :
-	gcc -o a unit_tests/gametest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/queue.c ../src/functions.c ../src/game_rng.c ../src/game_2048.c ../src/dinerdash.c ../src/ADT/q_dinerdash.c
+	gcc -o a unit_tests/gametest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/queue.c ../src/functions.c ../src/game_rng.c ../src/game_2048.c ../src/dinerdash.c ../src/ADT/q_dinerdash.c ../src/game_random.c 
 
 array :
 	gcc -o a unit_tests/arraytest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c
