--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,20 +1,20 @@
 main :
-	gcc -o BNMO ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/q_dinerdash.c ../src/ADT/queue.c ../src/functions.c ../src/commands.c ../src/games/dinerdash.c ../src/games/2048.c ../src/games/RNG.c ../src/games/random.c   
+	gcc -o BNMO ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/q_dinerdash.c ../src/ADT/queue.c ../src/functions.c ../src/commands.c ../src/games/dinerdash.c ../src/games/2048.c ../src/games/RNG.c ../src/games/random.c -lm
 
 game :
-	gcc -o gametest unit_tests/gametest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/queue.c ../src/ADT/listlinier.c ../src/ADT/stackofhanoi.c ../src/functions.c ../src/games/RNG.c ../src/games/2048.c ../src/games/dinerdash.c ../src/ADT/q_dinerdash.c ../src/games/random.c ../src/games/snake.c ../src/games/towerofhanoi.c 
+	gcc -o gametest unit_tests/gametest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/queue.c ../src/ADT/listlinier.c ../src/ADT/stackofhanoi.c ../src/functions.c ../src/games/RNG.c ../src/games/2048.c ../src/games/dinerdash.c ../src/ADT/q_dinerdash.c ../src/games/random.c ../src/games/snake.c ../src/games/towerofhanoi.c -lm
 
 array :
-	gcc -o arraytest unit_tests/arraytest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c
+	gcc -o arraytest unit_tests/arraytest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c -lm
 
 matriks :
-	gcc -o matrikstest unit_tests/matrikstest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/matriks.c ../src/functions.c
+	gcc -o matrikstest unit_tests/matrikstest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/matriks.c ../src/functions.c -lm
 
 queue :
-	gcc -o queuetest unit_tests/queuetest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/queue.c ../src/functions.c
+	gcc -o queuetest unit_tests/queuetest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/queue.c ../src/functions.c -lm
 
 mesinkata :
-	gcc -o mesinkatatest unit_tests/mesinkatatest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c
+	gcc -o mesinkatatest unit_tests/mesinkatatest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c -lm
 
 mesinkarakter :
-	gcc -o mesinkaraktertest unit_tests/mesinkatatest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c
+	gcc -o mesinkaraktertest unit_tests/mesinkatatest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c -lm
