Fixed tests and configured files

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,8 +1,8 @@
 main :
-	gcc -o BNMO ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/q_dinerdash.c ../src/ADT/stack.c ../src/ADT/queue.c ../src/ADT/listlinier.c ../src/ADT/map.c ../src/ADT/set.c ../src/ADT/stackofhanoi.c ../src/ADT/set_hangman.c ../src/functions.c ../src/commands.c ../src/games/dinerdash.c ../src/games/2048.c ../src/games/RNG.c ../src/games/random.c ../src/games/snake.c ../src/games/towerofhanoi.c ../src/games/hangman.c -lm -g
+	gcc -o BNMO ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/q_dinerdash.c ../src/ADT/stack.c ../src/ADT/queue.c ../src/ADT/listlinier.c ../src/ADT/map.c ../src/ADT/set.c ../src/ADT/tree.c ../src/ADT/stackofhanoi.c ../src/ADT/set_hangman.c ../src/functions.c ../src/commands.c ../src/games/dinerdash.c ../src/games/2048.c ../src/games/RNG.c ../src/games/random.c ../src/games/snake.c ../src/games/towerofhanoi.c ../src/games/hangman.c ../src/games/labtekhunt.c -lm -g
 
 game :
-	gcc -o gametest unit_tests/gametest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/queue.c ../src/ADT/listlinier.c ../src/ADT/stackofhanoi.c ../src/functions.c ../src/games/RNG.c ../src/games/2048.c ../src/games/dinerdash.c ../src/ADT/q_dinerdash.c ../src/games/random.c ../src/games/snake.c ../src/games/towerofhanoi.c -lm
+	gcc -o gametest unit_tests/gametest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/queue.c ../src/ADT/listlinier.c ../src/ADT/stackofhanoi.c ../src/functions.c ../src/games/RNG.c ../src/games/2048.c ../src/games/dinerdash.c ../src/ADT/q_dinerdash.c ../src/games/random.c ../src/games/snake.c ../src/games/towerofhanoi.c ../src/games/labtekhunt.c -lm
 
 array :
 	gcc -o arraytest unit_tests/arraytest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c -lm
