--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 /.vscode
 /bin/BNMO
 /bin/BNMO.exe
-/bin/gametest
-/bin/gametest.exe
 /bin/arraytest
 /bin/arraytest.exe
-/bin/matrikstest
-/bin/matrikstest.exe
-/bin/queuetest
-/bin/queuetest.exe
-/bin/mesinkatatest
-/bin/mesinkatatest.exe
-/bin/mesinkaraktertest
-/bin/mesinkaraktertest.exe
-/bin/stacktest
-/bin/stacktest.exe
-/bin/linkedlisttest
-/bin/linkedlisttest.exe
+/bin/listliniertest
+/bin/listliniertest.exe
 /bin/maptest
 /bin/maptest.exe
+/bin/matrikstest
+/bin/matrikstest.exe
+/bin/mesinkaraktertest
+/bin/mesinkaraktertest.exe
+/bin/mesinkatatest
+/bin/mesinkatatest.exe
+/bin/queuetest
+/bin/queuetest.exe
 /bin/settest
 /bin/settest.exe
+/bin/stacktest
+/bin/stacktest.exe
+/bin/treetest
+/bin/treetest.exe
