Ngubah struktur folder (#26)
* Moved related files into a shared directory

* Fixed ADT Array's module calls

* Fixed typo in arraytest

* Fixed ADT List Linear's calls

* Fixed ADT Map's calls

* Fixed ADT Matriks's calls

* Fixed ADT Mesin Karakter's calls

* Fixed ADT Mesin Kata's calls

* Fixed ADT Queue's calls

* Fixed ADT Queue's calls

* Fixed ADT Set's module calls

* Fixed ADT Stack's module calls

* Fixed ADT Tree's module calls

* Fixed Game 2048's module calls

* Fixed Game Diner DASH's module calls

* Fixed Game Hangman's module calls

* Fixed Game Tower of Hanoi's module calls

* Fixed Game Labtek Hunt's module calls

* Fixed Game random's module calls

* Fixed Game RNG's module calls

* Fixed Game Snake's module calls

* Fixed main.c and commands.h  module calls

* Removed unnecessary files

* Fixed ADT Stack's module calls

* Fixed ADT Queue's module calls

* Fixed calling .c instead of .h

* Fixed calling .c instead of .h

* Update gitignore

* Updated makefile

* Fixed typo

* Fixed more typo

* Update data

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,23 +1,32 @@
 main :
-	gcc -o BNMO ../main.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/q_dinerdash.c ../src/ADT/stack.c ../src/ADT/queue.c ../src/ADT/listlinier.c ../src/ADT/map.c ../src/ADT/set.c ../src/ADT/tree.c ../src/ADT/stackofhanoi.c ../src/ADT/set_hangman.c ../src/functions.c ../src/commands.c ../src/games/dinerdash.c ../src/games/2048.c ../src/games/RNG.c ../src/games/random.c ../src/games/snake.c ../src/games/towerofhanoi.c ../src/games/hangman.c ../src/games/labtekhunt.c -lm -g
-
-game :
-	gcc -o gametest unit_tests/gametest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/ADT/matriks.c ../src/ADT/queue.c ../src/ADT/listlinier.c ../src/ADT/stackofhanoi.c ../src/functions.c ../src/games/RNG.c ../src/games/2048.c ../src/games/dinerdash.c ../src/ADT/q_dinerdash.c ../src/games/random.c ../src/games/snake.c ../src/games/towerofhanoi.c ../src/games/labtekhunt.c -lm
+	gcc -o BNMO ../main.c ../src/ADT/mesinkata/mesinkata.c ../src/ADT/mesinkarakter/mesinkarakter.c ../src/ADT/array/array.c ../src/ADT/matriks/matriks.c ../src/ADT/queue/q_dinerdash.c ../src/ADT/stack/stack.c ../src/ADT/queue/queue.c ../src/ADT/listlinier/listlinier.c ../src/ADT/map/map.c ../src/ADT/set/set.c ../src/ADT/tree/tree.c ../src/ADT/stack/stackofhanoi.c ../src/ADT/set/set_hangman.c ../src/functions.c ../src/commands.c ../src/games/dinerdash/dinerdash.c ../src/games/2048/2048.c ../src/games/rng/RNG.c ../src/games/random/random.c ../src/games/snake/snake.c ../src/games/hanoi/towerofhanoi.c ../src/games/hangman/hangman.c ../src/games/labtekhunt/labtekhunt.c -lm
 
 array :
-	gcc -o arraytest unit_tests/arraytest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/array.c ../src/functions.c -lm
+	gcc -o arraytest ../src/ADT/array/arraytest.c ../src/ADT/mesinkata/mesinkata.c ../src/ADT/mesinkarakter/mesinkarakter.c ../src/ADT/array/array.c ../src/ADT/map/map.c ../src/functions.c -lm
 
-matriks :
-	gcc -o matrikstest unit_tests/matrikstest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/matriks.c ../src/functions.c -lm
-
-queue :
-	gcc -o queuetest unit_tests/queuetest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/ADT/queue.c ../src/functions.c -lm
-
-mesinkata :
-	gcc -o mesinkatatest unit_tests/mesinkatatest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c -lm
-
-mesinkarakter :
-	gcc -o mesinkaraktertest unit_tests/mesinkatatest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c -lm
+listlinier :
+	gcc -o listliniertest ../src/ADT/listlinier/listliniertest.c ../src/ADT/listlinier/listlinier.c -lm
 
 map :
-	gcc -o maptest unit_tests/maptest.c ../src/ADT/mesinkata.c ../src/ADT/mesinkarakter.c ../src/functions.c ../src/ADT/map.c -lm
+	gcc -o maptest ../src/ADT/map/maptest.c ../src/ADT/mesinkata/mesinkata.c ../src/ADT/mesinkarakter/mesinkarakter.c ../src/ADT/map/map.c ../src/functions.c -lm
+
+matriks :
+	gcc -o matrikstest ../src/ADT/matriks/matrikstest.c ../src/ADT/mesinkata/mesinkata.c ../src/ADT/mesinkarakter/mesinkarakter.c ../src/ADT/matriks/matriks.c ../src/ADT/map/map.c ../src/functions.c -lm
+
+mesinkarakter :
+	gcc -o mesinkaraktertest ../src/ADT/mesinkata/mesinkatatest.c ../src/ADT/mesinkata/mesinkata.c ../src/ADT/mesinkarakter/mesinkarakter.c ../src/ADT/map/map.c ../src/functions.c -lm
+
+mesinkata :
+	gcc -o mesinkatatest ../src/ADT/mesinkata/mesinkatatest.c ../src/ADT/mesinkata/mesinkata.c ../src/ADT/mesinkarakter/mesinkarakter.c ../src/ADT/map/map.c ../src/functions.c -lm
+
+queue :
+	gcc -o queuetest ../src/ADT/queue/queuetest.c ../src/ADT/mesinkata/mesinkata.c ../src/ADT/mesinkarakter/mesinkarakter.c ../src/ADT/queue/queue.c ../src/ADT/queue/q_dinerdash.c ../src/ADT/map/map.c ../src/functions.c -lm
+
+set :
+	gcc -o settest ../src/ADT/set/settest.c ../src/ADT/set/set.c ../src/ADT/mesinkata/mesinkata.c ../src/ADT/mesinkarakter/mesinkarakter.c -lm
+
+stack :
+	gcc -o stacktest ../src/ADT/stack/stacktest.c ../src/ADT/stack/stack.c
+
+tree :
+	gcc -o treetest ../src/ADT/tree/treetest.c ../src/ADT/tree/tree.c
